--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <li><a href="#" class="button special fit small">এক জীবন</a></li>
                 <li><a href="#" class="button fit small">দরকার দক্ষতা</a></li>
             </ul>
-            <p>আমরা হয়তোবা বাঁচি ৭০-৮০ বছর, সেই তুলনায় আমারা যেতে পারতাম আরো দুরে। সেই দক্ষতা এবং উৎকর্ষের ধারণা নিয়ে আমার গল্প।</p>
+            <p>আগে যেই জিনিস করতে লাগতো কয়েক যুগ, সেটা লাগছে কয়েক বছর। এই ভ্যাকসিনের কথাই ধরুন। আমাদের দেশে একটা পাসপোর্ট, কিংবা একটা ক্লিয়ারেন্স, নামজারী, দলিল ইত্যাদি বানাতে কয়েকমাস লাগলেও হাতের নাগালের প্রযুক্তি সেটাকে দিতে পারে কয়েক ঘন্টায়। সরকারি/বেসরকারি সার্ভিস ঘন্টায় নামিয়ে আনতে পারলে মানুষের এক জীবনেই অনেক কিছু করা সম্ভব। তাহলে একটা মানুষকে "এনাবল" করা সম্ভব, তার স্বপ্নের কাছে যেতে। এক জীবনেই করতে পারতাম অনেক কিছুই। সেই দক্ষতা এবং উৎকর্ষের সন্ধানে নেমেছি আমি। এখন আমরা হয়তোবা বাঁচি ৭০-৮০ বছর, সেই তুলনায় আমারা যেতে পারতাম আরো দুরে। সেই দক্ষতা এবং উৎকর্ষের ধারণা নিয়ে আমার গল্প।</p>
             <ul class="actions">
                 <li><a href="https://aiwithr.github.io/aibook/#_4" class="button next">শুরু কোথায়?</a></li>
             </ul>
